myweb/statefulset.yaml
# statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myweb
  namespace: myweb
spec:
  replicas: 1
  serviceName: myweb-service
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sc-nfs-pvc
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: sc-nfs-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "nfs-client"
        resources:
          requests:
            storage: 1Gi
