myweb/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-service
  namespace: myweb
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: myweb
